--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.6'
     compile group: 'junit', name: 'junit', version: '4.12'
     compile "junit:junit:4:12"
+    compile group: 'org.ow2.asm', name: 'asm', version: '6.0'
 }
